--- a/code/client/package.json
+++ b/code/client/package.json
@@ -1,112 +1,116 @@
 {
-  "name": "one-wallet-web",
-  "version": "0.10.3",
-  "private": true,
-  "license": "Apache-2.0",
-  "main": "client.js",
-  "scripts": {
-    "dev": "webpack serve --mode=development",
-    "build": "webpack --config webpack.config.js"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.13.15",
-    "@babel/plugin-proposal-class-properties": "^7.13.0",
-    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/plugin-syntax-jsx": "^7.12.13",
-    "@babel/plugin-transform-react-constant-elements": "^7.13.13",
-    "@babel/plugin-transform-react-inline-elements": "^7.12.13",
-    "@babel/plugin-transform-react-jsx": "^7.12.17",
-    "@babel/plugin-transform-runtime": "^7.14.3",
-    "@babel/polyfill": "^7.12.1",
-    "@babel/preset-env": "^7.13.15",
-    "@babel/preset-react": "^7.13.13",
-    "@babel/runtime": "^7.14.0",
-    "@truffle/contract": "^4.3.17",
-    "@truffle/debug-utils": "github:polymorpher/truffle-debug-utils",
-    "babel-loader": "^8.2.2",
-    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
-    "babel-preset-react": "^6.24.1",
-    "base64-loader": "^1.0.0",
-    "copy-webpack-plugin": "^5.0.5",
-    "core-js": "^3.13.0",
-    "css-loader": "^5.2.6",
-    "eslint": "^7.26.0",
-    "eslint-config-airbnb": "18.0.1",
-    "eslint-config-standard": "^16.0.3",
-    "eslint-config-standard-jsx": "^10.0.0",
-    "eslint-plugin-import": "^2.23.3",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.1.0",
-    "eslint-plugin-react": "^7.23.2",
-    "eslint-plugin-truffle": "^0.3.1",
-    "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.3.1",
-    "less": "^4.1.1",
-    "less-loader": "^9.1.0",
-    "mini-css-extract-plugin": "^1.6.0",
-    "sass": "^1.34.1",
-    "sass-loader": "^12.0.0",
-    "style-loader": "^2.0.0",
-    "tslib": "^2.3.0",
-    "webpack": "^5.33.2",
-    "webpack-bundle-analyzer": "^3.6.1",
-    "webpack-cli": "4.8.0",
-    "webpack-dev-server": "^4.0.0",
-    "webpack-obfuscator": "^0.27.4"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "dependencies": {
-    "@ant-design/icons": "^4.6.2",
-    "@harmony-js/core": "^0.1.57",
-    "@harmony-js/crypto": "^0.1.56",
-    "@reduxjs/toolkit": "^1.6.0",
-    "@sentry/browser": "^6.8.0",
-    "@sentry/react": "^6.8.0",
-    "@sentry/tracing": "^6.8.0",
-    "antd": "^4.16.2",
-    "axios": "^0.21.1",
-    "bn.js": "^5.2.0",
-    "connected-react-router": "^6.9.1",
-    "hi-base32": "^0.5.1",
-    "history": "4.10.1",
-    "humanize-duration": "^3.27.0",
-    "jsqr": "^1.2.0",
-    "localforage": "^1.9.0",
-    "lodash": "^4.17.10",
-    "protobufjs": "^6.11.2",
-    "qrcode": "^1.4.4",
-    "query-string": "^7.0.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-otp-input": "^2.4.0",
-    "react-qr-reader": "git+https://github.com/polymorpher/react-qr-reader#v3.0",
-    "react-redux": "^7.2.2",
-    "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0",
-    "react-transition-group": "^4.4.2",
-    "redux": "^4.0.5",
-    "redux-actions": "^2.6.5",
-    "redux-persist": "^5.10.0",
-    "redux-saga": "^1.1.3",
-    "styled-components": "^5.3.0",
-    "title-case": "^3.0.3",
-    "unique-names-generator": "^4.5.0",
-    "uuid": "^8.3.2",
-    "web3": "^1.3.6"
-  },
-  "resolutions": {
-    "tar": ">=4.4.15"
-  }
+    "name": "one-wallet-web",
+    "version": "0.11.0",
+    "private": true,
+    "license": "Apache-2.0",
+    "main": "client.js",
+    "scripts": {
+        "dev": "webpack serve --mode=development",
+        "build": "webpack --config webpack.config.js"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.13.15",
+        "@babel/plugin-proposal-class-properties": "^7.13.0",
+        "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+        "@babel/plugin-syntax-jsx": "^7.12.13",
+        "@babel/plugin-transform-react-constant-elements": "^7.13.13",
+        "@babel/plugin-transform-react-inline-elements": "^7.12.13",
+        "@babel/plugin-transform-react-jsx": "^7.12.17",
+        "@babel/plugin-transform-runtime": "^7.14.3",
+        "@babel/polyfill": "^7.12.1",
+        "@babel/preset-env": "^7.13.15",
+        "@babel/preset-react": "^7.13.13",
+        "@babel/runtime": "^7.14.0",
+        "@truffle/contract": "^4.3.17",
+        "@truffle/debug-utils": "github:polymorpher/truffle-debug-utils",
+        "babel-loader": "^8.2.2",
+        "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+        "babel-preset-react": "^6.24.1",
+        "base64-loader": "^1.0.0",
+        "copy-webpack-plugin": "^5.0.5",
+        "core-js": "^3.13.0",
+        "css-loader": "^5.2.6",
+        "eslint": "^7.26.0",
+        "eslint-config-airbnb": "18.0.1",
+        "eslint-config-standard": "^16.0.3",
+        "eslint-config-standard-jsx": "^10.0.0",
+        "eslint-plugin-import": "^2.23.3",
+        "eslint-plugin-jsx-a11y": "^6.4.1",
+        "eslint-plugin-node": "^11.1.0",
+        "eslint-plugin-promise": "^5.1.0",
+        "eslint-plugin-react": "^7.23.2",
+        "eslint-plugin-truffle": "^0.3.1",
+        "file-loader": "^6.2.0",
+        "html-webpack-plugin": "^5.3.1",
+        "less": "^4.1.1",
+        "less-loader": "^9.1.0",
+        "mini-css-extract-plugin": "^1.6.0",
+        "sass": "^1.34.1",
+        "sass-loader": "^12.0.0",
+        "style-loader": "^2.0.0",
+        "tslib": "^2.3.0",
+        "webpack": "^5.33.2",
+        "webpack-bundle-analyzer": "^3.6.1",
+        "webpack-cli": "4.8.0",
+        "webpack-dev-server": "^4.0.0",
+        "webpack-obfuscator": "^0.27.4"
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "dependencies": {
+        "@ant-design/icons": "^4.6.2",
+        "@harmony-js/core": "^0.1.57",
+        "@harmony-js/crypto": "^0.1.56",
+        "@reduxjs/toolkit": "^1.6.0",
+        "@sentry/browser": "^6.8.0",
+        "@sentry/react": "^6.8.0",
+        "@sentry/tracing": "^6.8.0",
+        "antd": "^4.16.2",
+        "axios": "^0.21.1",
+        "bn.js": "^5.2.0",
+        "connected-react-router": "^6.9.1",
+        "gsap": "npm:@gsap/shockingly",
+        "hi-base32": "^0.5.1",
+        "history": "4.10.1",
+        "humanize-duration": "^3.27.0",
+        "i18next": "^20.6.1",
+        "i18next-browser-languagedetector": "^6.1.2",
+        "jsqr": "^1.2.0",
+        "localforage": "^1.9.0",
+        "lodash": "^4.17.10",
+        "protobufjs": "^6.11.2",
+        "qrcode": "^1.4.4",
+        "query-string": "^7.0.0",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "react-i18next": "^11.12.0",
+        "react-otp-input": "^2.4.0",
+        "react-qr-reader": "git+https://github.com/polymorpher/react-qr-reader#v3.0",
+        "react-redux": "^7.2.2",
+        "react-router": "^5.2.1",
+        "react-router-dom": "^5.3.0",
+        "react-transition-group": "^4.4.2",
+        "redux": "^4.0.5",
+        "redux-actions": "^2.6.5",
+        "redux-persist": "^5.10.0",
+        "redux-saga": "^1.1.3",
+        "styled-components": "^5.3.1",
+        "title-case": "^3.0.3",
+        "unique-names-generator": "^4.5.0",
+        "uuid": "^8.3.2",
+        "web3": "^1.3.6"
+    },
+    "resolutions": {
+        "tar": ">=4.4.15"
+    }
 }
