--- a/code/client/package.json
+++ b/code/client/package.json
@@ -88,10 +88,12 @@
         "jsqr": "^1.2.0",
         "localforage": "^1.9.0",
         "lodash": "^4.17.10",
+        "prop-types": "^15.7.2",
         "protobufjs": "^6.11.2",
         "qrcode": "^1.4.4",
         "query-string": "^7.0.0",
         "react": "^17.0.2",
+        "react-auth-code-input": "^1.2.1",
         "react-dom": "^17.0.2",
         "react-i18next": "^11.12.0",
         "react-otp-input": "^2.4.0",
