--- a/code/client/package.json
+++ b/code/client/package.json
@@ -75,6 +75,7 @@
         "@sentry/browser": "^6.8.0",
         "@sentry/react": "^6.8.0",
         "@sentry/tracing": "^6.8.0",
+        "@svgr/webpack": "^5.5.0",
         "antd": "^4.16.2",
         "axios": "^0.21.1",
         "bn.js": "^5.2.0",
