--- a/code/client/package.json
+++ b/code/client/package.json
@@ -102,13 +102,13 @@
         "react-redux": "^7.2.2",
         "react-router": "^5.2.1",
         "react-router-dom": "^5.3.0",
+        "react-select": "^4.3.1",
         "react-transition-group": "^4.4.2",
         "redux": "^4.0.5",
         "redux-actions": "^2.6.5",
         "redux-persist": "^5.10.0",
         "redux-saga": "^1.1.3",
         "styled-components": "^5.3.1",
-        "title-case": "^3.0.3",
         "unique-names-generator": "^4.5.0",
         "uuid": "^8.3.2",
         "web3": "^1.3.6"
